--- a/SIGTR/dashboard/templates/dashboard/admin/admin_inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/admin/admin_inicio.html
@@ -6,14 +6,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="{% static 'dashboard/css/admin/admin.css' %}">
-    <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Bootstrap CSS-->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <title>Document</title>
+    <!-- Estilos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'dashboard/css/admin/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/css/admin/modal.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
+
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+
 </head>
 
 <body>
@@ -23,7 +31,8 @@
                 <!--primera columna-->
                 <div class="barraLateral">
                     <div class="logo">
-                        <div class="logoIMG"><img src="{% static 'dashboard/img/logoICASOFT.webp' %}" alt="logo" id="logo"></div>
+                        <div class="logoIMG"><img src="{% static 'dashboard/img/logoICASOFT.webp' %}" alt="logo"
+                                id="logo"></div>
                         <div class="nombreLogo">ICASOFT INGENIERÍA 21</div>
                     </div>
                     <div class="cuadroFunctions">
@@ -40,7 +49,7 @@
                                 <div class="iconFunction">
                                     <i class="fa-solid fa-users"></i>
                                 </div>
-                                <a  href="{% url 'read_client' %}" class="textFunction">CLIENTES</a>
+                                <a href="{% url 'read_client' %}" class="textFunction">CLIENTES</a>
                             </button>
                         </div>
                         <div class="function">
@@ -49,6 +58,30 @@
                                     <i class="fa-solid fa-screwdriver-wrench"></i>
                                 </div>
                                 <a href="{% url 'read_technician' %}" class="textFunction">TÉCNICOS</a>
+                            </button>
+                        </div>
+                        <div class="function">
+                            <button class="btnFunction">
+                                <div class="iconFunction">
+                                    <i class="fa-solid fa-desktop"></i>
+                                </div>
+                                <a href="{% url 'read_technician' %}" class="textFunction">PRODUCTOS</a>
+                            </button>
+                        </div>
+                        <div class="function">
+                            <button class="btnFunction">
+                                <div class="iconFunction">
+                                    <i class="fa-solid fa-book"></i>
+                                </div>
+                                <a href="{% url 'read_technician' %}" class="textFunction">CURSOS</a>
+                            </button>
+                        </div>
+                        <div class="function">
+                            <button class="btnFunction">
+                                <div class="iconFunction">
+                                    <i class="fa-solid fa-sliders"></i>
+                                </div>
+                                <a href="{% url 'read_technician' %}" class="textFunction">SERVICIOS</a>
                             </button>
                         </div>
                         <div class="function">
@@ -115,9 +148,9 @@
                     <div class="lugares" id="graficoTickets">
                         <div class="tituloGrafico">GESTIÓN DE TICKETS</div>
                         <div class="graficoLugares">
-                            <canvas id="donutsTickets" width="375" height="187"></canvas>
+                            <canvas id="donutsTickets" class="donutsTickets noResponsive" width="375" height="187"></canvas>
                         </div>
-                        <div class="verInforme"> <button class="btnVerInforme">VER INFORME</button></div>
+                        <div class="verInforme"><button class="btnVerInforme" id="btnTicketsEstado">VER INFORME</button></div>
                     </div>
 
                     <div class="lugares" id="graficoServicio">
@@ -128,32 +161,38 @@
                         <div class="verInforme"> <button class="btnVerInforme">VER INFORME</button></div>
                     </div>
                     <div class="lugares" id="usuarios">
-                        <div class="textActividad">USUARIO ONLINE</div>
+                        <div class="textActividad">CLIENTES ONLINE</div>
                         <div class="userTickets">
-                            <div class="usuariosLinea">
+                            <div class="usuariosLinea" id="clientTotal">
                                 <div class="userDispTicket">
                                     <div class="iconFunction">
-                                        <i class="fa-solid fa-ticket iconTicketUser"
-                                            style="color: rgb(55, 175, 223)"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                        <i class="fa-solid fa-users iconClient"></i>
                                     </div>
-                                    <div class="textFunction">TICKETS</div>
                                 </div>
-                                <div class="cantTicket">40</div>
+                                <div class="textFunction" id="contentClient">
+                                    <div class="">TOTAL</div>
+                                    <div class="cantTicket" id="cantClient"></div>
+                                </div>
                             </div>
-                            <div class="usuariosLinea">
+                             <div class="usuariosLinea">
                                 <div class="userDispTicket">
                                     <div class="iconFunction">
-                                        <i class="fa-solid fa-ticket iconTicketUser"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser"></i>
-                                        <i class="fa-solid fa-ticket iconTicketUser"></i>
+                                        <div>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                        </div>
+                                        <div>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                            <i class="fa-solid fa-ticket iconTicketUser" style="color: rgb(55,175,223)"></i>
+                                        </div>
                                     </div>
-                                    <div class="textFunction">SIN TICKETS</div>
+                                    <div class="textFunction">TICKETS ACTIVOS</div>
                                 </div>
-                                <div class="cantTicket">30</div>
+                                <div class="cantTicket" id="ticketClient"></div>
                             </div>
                         </div>
                     </div>
@@ -201,15 +240,27 @@
                     </div> -->
                     <div class="ubiTecnicos">
                         <div class="textUbicacion">
-                            <input type="text" name="daterange" id="fechaIntervalos" value="12-04-2025 - 12-05-2025">
+                            <div>
+                                <input type="text" name="daterange" id="fechaIntervalos"
+                                    value="12-04-2025 - 12-05-2025" class="filtro">
+                            </div>
+                            <div>
+                                <select name="" id="listTech" class="filtro">   
+                                    <!--contenido js--> 
+                                </select>
+                            </div>
+                            <div>
+                                <a href="{% url 'users:logout' %}"><i class="fa-solid fa-right-from-bracket"
+                                        style="color: brown; font-size: x-large;"></i></a>
+                            </div>
                         </div>
                         <div class="dataMapa">
                             <div class="mapa">
-                                <iframe class="mapaUbi"
+                                <!-- <iframe class="mapaUbi"
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3870.2186740547177!2d-75.7278443!3d-14.0642606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9110e2bd0f99f96f%3A0x21a304d4341e31e2!2sIcasoft%20i21!5e0!3m2!1ses-419!2spe!4v1742567745922!5m2!1ses-419!2spe"
                                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade">
-                                </iframe>
+                                </iframe> -->
                             </div>
                             <div class="contentTecnico">
                                 <div class="contentSelect">
@@ -228,8 +279,8 @@
                                         <div class="tituloCant">
                                             TOTAL
                                         </div>
-                                        <div class="totalCant">
-                                            40
+                                        <div class="totalCant" id="techDisp">
+                                            <!--contenigo js-->
                                         </div>
                                     </div>
                                 </div>
@@ -249,8 +300,8 @@
                                         <div class="tituloCant">
                                             TOTAL
                                         </div>
-                                        <div class="totalCant">
-                                            40
+                                        <div class="totalCant" id="techAsig">
+                                            <!--contenigo js-->
                                         </div>
                                     </div>
                                 </div>
@@ -272,11 +323,10 @@
         </div>
     </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+{% include "dashboard/admin/modalInicio.html" %}
 <script src="{% static 'dashboard/js/admin/adminInicio.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<!-- Bootstrap JS -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script> -->
 
 </html>
 {% endblock %}
